# slooth

./: .gitignore  CMakeLists.txt  README.md
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glm/include/glm/detail/: type_quat.hpp  type_quat.inl
libraries/glm/include/glm/ext/: matrix_transform.hpp  quaternion_common.hpp  quaternion_transform.hpp  quaternion_transform.inl  quaternion_trigonometric.hpp
libraries/glm/include/glm/gtc/: quaternion.hpp
src/: camera.cpp  camera.hpp  keys.hpp  main.cpp  object.cpp  object.hpp  shader.cpp  shader.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
src/core/: camera.cpp  camera.hpp  keys.hpp  light.cpp  light.hpp  material.cpp  material.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
src/core/shaders/: vertexColoured.frag  vertexDefault.frag  vertexDefault.vert  vertexPlain.frag  vertexPlain.vert
src/objects/: cuboid.cpp  cuboid.hpp  plane.cpp  plane.hpp  rect.cpp  rect.hpp  sphere.cpp  sphere.hpp
src/shaders/: default.frag  default.vert  vertexColoured.vert
